fix(web): color 15 not showing
* change scss for loop from using 'to' to using 'through'

--- a/web/src/styles/_project-colors.scss
+++ b/web/src/styles/_project-colors.scss
@@ -1,5 +1,5 @@
 @mixin project-colors($property) {
-  @for $i from 0 to 15 {
+  @for $i from 0 through 15 {
     &_color#{$i} {
       #{$property}: var(--project-color-#{$i});
     }
